[gd_scene load_steps=4 format=3 uid="uid://5ml16m0mxnyx"]

[ext_resource type="Script" path="res://scene/weapons/weapon_base/ranged_base/ranged_weapon_base.gd" id="1_i03u0"]
[ext_resource type="AudioStream" uid="uid://q8tm6ux36jdj" path="res://asset/brackeys_platformer_assets/sounds/tap.wav" id="2_hq0qr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ysytp"]
radius = 1.0

[node name="RangedWeaponBase" type="Node2D"]
script = ExtResource("1_i03u0")

[node name="attack_range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_range"]
shape = SubResource("CircleShape2D_ysytp")

[node name="shootTimer" type="Timer" parent="."]
one_shot = true

[node name="sound_shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_hq0qr")

[connection signal="timeout" from="shootTimer" to="." method="_on_shoot_timer_timeout"]
